--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    ...
+    <uses-feature android:name="android.hardware.location.gps" /> <!-- for api 21 above-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
