--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    ...
+    <uses-feature android:name="android.hardware.location.gps" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    ...
-    <uses-feature android:name="android.hardware.location.gps" /> <!-- for api 21 above-->
-
+    <!-- for api 21 above -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,8 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".SearchActivity" />
-        <activity android:name=".ContributeActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".ContributeActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".ShowPlaceActivity"></activity>
     </application>
 
 </manifest>
