--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'org.skyscreamer:jsonassert:1.4.0'
 }
