--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'org.skyscreamer:jsonassert:1.4.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
 }
