--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     ...
     <uses-feature android:name="android.hardware.location.gps" />
 
@@ -28,7 +27,16 @@
         <activity
             android:name=".ContributeActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ShowPlaceActivity"></activity>
+        <activity android:name=".ShowPlaceActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBvxBhjtGb1mxuSiJYYbF8wiPtbNzeluiw" />
+
+        <activity android:name=".MapActivity"></activity>
     </application>
 
 </manifest>
