--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.akexorcist:googledirectionlibrary:1.0.4'
+    compile 'com.uber.sdk:rides-android:0.5.4'
 }
